# v4l2-wlctl

./: .gitmodules  meson.build
src/: main.cpp  oneshot.cpp  v4l2.cpp  v4l2.hpp  window.cpp  window.hpp
